src/components/About/index.module.css
.section {
    width: 100%;
    overflow-y: hidden;
    position: relative;
    display: flex;
    flex-direction: column;
    justify-content: space-between;

    padding-bottom: 3%;
    padding-top: 1%;
}

.section::before {
    content: '';
    position: absolute;
    top: max(-100px, -45%);
    left: 0;
    width: 100%;
    height: 100%;
    
    background-image: url(/static/map.svg);
    background-position: center top;
    background-repeat: no-repeat;
    background-size: contain;
}

.button {
   width: 100%;
   max-width: 300px;
   align-self: flex-end;
   margin-top: 20px;
   background-color: transparent;
   border: solid 12px var(--color-blue);
   border-radius: 50%;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);

   color: var(--color-blue);

   transition: all .25s;
   position: relative;
   align-self: flex-end;
}

.button::after {
    content: '';
    display: block;
    margin-top: 100%;
}

.button:hover {
   background-color: var(--color-blue);
   box-shadow: 0px 4px 24px var(--color-blue);
   border-width: 0px;
   color: white;
   cursor: pointer;
}

.butonText {
    position: absolute;
    width: 100%;
    height: 100%;
    
    display: flex;
    align-items: center;
    justify-content: center;

   font-family: var(--font-family);
   font-size: 1.5rem;
   font-weight: bold;
   letter-spacing: .25em;
   text-transform: uppercase;
   text-decoration: none;
}

.credits {
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
}

.linkUnit {
    cursor: pointer;
    color:white;
    background-color: black;
    padding: .05rem .5rem;
    white-space: nowrap;
}

.linkUnit:hover {
    text-decoration: underline;
}

